# factorminer

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  pyproject.toml  run_demo.py  run_phase2_benchmark.py
.claude/: launch.json
code-wiki/: index.md  log.md
code-wiki/concepts/: auto-inventor.md  experience-memory.md  expression-tree.md  factor-evaluation.md  factor-generator.md  factor-library.md  gpu-backend.md  neuro-symbolic.md  provenance.md  ralph-loop.md
code-wiki/design/: dual-lane.md  test-strategy.md  typed-dsl.md
code-wiki/modules/: agent.md  benchmark.md  configs.md  core.md  data.md  evaluation.md  memory.md  operators.md  utils.md
code-wiki/practice/: astock-quickstart.md  factor-mining-workflow.md  ic-analysis-guide.md
code-wiki/troubleshooting/: common-issues.md
data/: binance_crypto_5m.csv
factorminer/: __init__.py  cli.py
factorminer/agent/: __init__.py  critic.py  debate.py  factor_generator.py  llm_interface.py  output_parser.py  prompt_builder.py  specialists.py
factorminer/benchmark/: __init__.py  ablation.py  helix_benchmark.py  runtime.py
factorminer/configs/: __init__.py  benchmark_full.yaml  default.yaml  demo_local.yaml  helix_research.yaml  paper_repro.yaml
factorminer/core/: __init__.py  canonicalizer.py  config.py  expression_tree.py  factor_library.py  helix_loop.py  library_io.py  parser.py  provenance.py  ralph_loop.py  session.py  types.py
factorminer/data/: __init__.py  astock.py  loader.py  mock_data.py  preprocessor.py  tensor_builder.py
factorminer/evaluation/: __init__.py  admission.py  backtest.py  capacity.py  causal.py  combination.py  correlation.py  metrics.py  pipeline.py  portfolio.py  regime.py  research.py  runtime.py  selection.py  significance.py  transaction_costs.py
factorminer/memory/: __init__.py  embeddings.py  evolution.py  experience_memory.py  formation.py  kg_retrieval.py  knowledge_graph.py  memory_store.py  online_regime_memory.py  retrieval.py
factorminer/operators/: __init__.py  arithmetic.py  auto_inventor.py  crosssectional.py  custom.py  (+8 more)
guide/: 01-introduction.md  02-installation.md  03-core-concepts.md  04-architecture.md  05-expression-tree.md  06-operators.md  07-ralph-loop.md  08-evaluation.md  09-memory.md  10-helix-loop.md  11-cli-reference.md
output/: factor_library.json  factor_library_signals.npz  mining_batches.jsonl  session.json  session_log.json
(+43 files in other folders)
